Mon Aug 12 23:49:41 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* autogen.sh : use portable -o instead of GNU-ish -or for find test

2002-08-10  Miles Lane  <miles_lane@yahoo.com>

	* autogen.sh: fix the "find" test so that the presence of
	  configure.in is reporteded.  Each expression requires its
	  own -print flag.

2002-08-10  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* autogen.sh: support for configure.ac

2002-05-10  Chema Celorio  <chema@celorio.com>

	* compiler-flags.m4: fix GNOME_COMPILE_WARNINGS to work when a parameter is
	passed. The arguments to AC_ARG_ENABLE where swapped

2002-04-01  jacob berkman  <jacob@ximian.com>

	* gnome-x-checks.m4 (GNOME2_X_CHECKS): kill bogus clearing of
	LDFLAGS

2001-10-29  jacob berkman  <jacob@ximian.com>

	* autogen.sh: add check for glib-gettextize

2001-10-15  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am, curses.m4: added curses.m4 (copied from the gnome1
	macros. this file is needed to gdialog

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Complete intltool support.

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Add intltool support.

2001-09-04  Frank Belew  <frb@ximian.com>

	* autogen.sh: change gettext regexp to work with non-gnu grep

2001-08-18  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Don't ask people to ignore xml-i18n-tools messages.

2001-08-04  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Update gettext logic to allow anything that
	starts with AM and ends with gettext. This makes it work with
	AM_GLIB_GNU_GETTEXT, which is what libbonobo is now using.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* gnome-pkgconfig.m4 (GNOME_PKGCONFIG_CHECK_VERSION): Removed.
	(GNOME_PKGCONFIG_CHECK_CFLAG): Removed.
	(GNOME_PKGCONFIG_ACLOCALFLAGS): Removed.
	(GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES): Removed.
	(GNOME_PKGCONFIG_CHECK_MODULES): Removed.
	(GNOME_CHECK_PKGCONFIG): Use $PKG_CONFIG --atleast-pkgconfig-version